tests/syntax-error/scope.silly
// RUN: cd %S
// RUN: %Not %ExeSilly -g scope.silly -o %t.exe 2>&1 | %FileCheck %s
// CHECK: scope.silly: In function ‘foo’:
// CHECK: scope.silly:16:11: error: Undeclared variable x
// CHECK:    16 |     PRINT x;
// CHECK:       |           ^

// This is documented as a bug in the README.  Doesn't make sense if you are used to C semantics

FUNCTION foo()
{
    IF (TRUE)
    {
        INT32 x = 1;
    };
    PRINT x;
    RETURN;
};

CALL foo();
